fixed previous work heading alignment.

--- a/static/styles/all_business.css
+++ b/static/styles/all_business.css
@@ -45,6 +45,7 @@ a {
 
 .head-section h1 {
     font-size: 3rem;
+    text-align: center;
 }
 
 .head-section hr {
